--- a/GateServer/projects/GateServer1/Server1.vcxproj
+++ b/GateServer/projects/GateServer1/Server1.vcxproj
@@ -59,7 +59,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;_CRT_NONSTDC_NO_DEPRECATE;_CRT_SECURE_NO_DEPRECATE;_XKEYCHECK_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>.\Classes;.\Classes\network;.\Classes\cc;.\Classes\common;..\..\protobuf\src;..\..\poco\Foundation\include;..\..\poco\Net\include;..\..\poco\Util\include;.\Classes\proto;..\..\poco\Data\include;..\..\poco\Data\MySQL\include;..\..\poco\Data\SQLite\include;..\..\poco\CppUnit\include\;.\Classes\sql;D:\Program Files\mysql\include;.\Classes\http;.\Classes\netjson;.\Classes\poco;.\Classes\room;.\Classes\control;.\Classes\log;..\..\libevent\include;..\..\libevent\include\event2;..\..\curl\include\win32\curl;..\..\libMessagePack;.\Classes\cryptopp;..\..\..\redis\src;..\..\..\redis\deps\hiredis;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Classes;.\Classes\network;.\Classes\cc;.\Classes\common;..\..\protobuf\src;..\..\poco\Foundation\include;..\..\poco\Net\include;..\..\poco\Util\include;.\Classes\proto;..\..\poco\Data\include;..\..\poco\Data\MySQL\include;..\..\poco\Data\SQLite\include;..\..\poco\CppUnit\include\;.\Classes\sql;D:\Program Files\mysql\include;.\Classes\http;.\Classes\netjson;.\Classes\poco;.\Classes\room;.\Classes\control;.\Classes\log;..\..\libevent\include;..\..\libevent\include\event2;..\..\curl\include\win32\curl;..\..\libMessagePack;.\Classes\cryptopp;..\..\..\redis\src;..\..\..\redis\deps\hiredis;.\Classes\redisdata;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
@@ -121,6 +121,9 @@
     <ClCompile Include="Classes\proto\HallInfo.cpp" />
     <ClCompile Include="Classes\proto\LogicServerInfo.cpp" />
     <ClCompile Include="Classes\proto\LoginInfo.cpp" />
+    <ClCompile Include="Classes\redisdata\RedisGet.cpp" />
+    <ClCompile Include="Classes\redisdata\RedisModify.cpp" />
+    <ClCompile Include="Classes\redisdata\RedisPut.cpp" />
     <ClCompile Include="Classes\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +168,9 @@
     <ClInclude Include="Classes\proto\HallInfo.h" />
     <ClInclude Include="Classes\proto\LogicServerInfo.h" />
     <ClInclude Include="Classes\proto\LoginInfo.h" />
+    <ClInclude Include="Classes\redisdata\RedisGet.h" />
+    <ClInclude Include="Classes\redisdata\RedisModify.h" />
+    <ClInclude Include="Classes\redisdata\RedisPut.h" />
     <ClInclude Include="Classes\stdafx.h" />
     <ClInclude Include="Classes\targetver.h" />
   </ItemGroup>
