--- a/SQLServer/MYSQLServer/MYSQLServer.vcxproj.filters
+++ b/SQLServer/MYSQLServer/MYSQLServer.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="源文件\Classes\cc">
       <UniqueIdentifier>{1e81db2a-1c90-44d2-a5ba-95cd5ccfb1fa}</UniqueIdentifier>
     </Filter>
+    <Filter Include="源文件\Classes\redisdata">
+      <UniqueIdentifier>{4cf80fb4-0d7c-4699-b02c-e43461974563}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Classes\HttpEvent.cpp">
@@ -81,9 +84,6 @@
     <ClCompile Include="..\..\redis\src\redis.cpp">
       <Filter>源文件\Classes</Filter>
     </ClCompile>
-    <ClCompile Include="Classes\cc\DBProto.cpp">
-      <Filter>源文件\Classes\cc</Filter>
-    </ClCompile>
     <ClCompile Include="Classes\cc\Hall.cpp">
       <Filter>源文件\Classes\cc</Filter>
     </ClCompile>
@@ -108,12 +108,18 @@
     <ClCompile Include="Classes\StatTimer.cpp">
       <Filter>源文件\Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\redisdata\RedisGet.cpp">
+      <Filter>源文件\Classes\redisdata</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\redisdata\RedisModify.cpp">
+      <Filter>源文件\Classes\redisdata</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\redisdata\RedisPut.cpp">
+      <Filter>源文件\Classes\redisdata</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\HttpEvent.h">
-      <Filter>源文件\Classes</Filter>
-    </ClInclude>
-    <ClInclude Include="Classes\stdafx.h">
       <Filter>源文件\Classes</Filter>
     </ClInclude>
     <ClInclude Include="Classes\targetver.h">
@@ -191,9 +197,6 @@
     <ClInclude Include="..\..\redis\src\redis.h">
       <Filter>源文件\Classes</Filter>
     </ClInclude>
-    <ClInclude Include="Classes\cc\DBProto.h">
-      <Filter>源文件\Classes\cc</Filter>
-    </ClInclude>
     <ClInclude Include="Classes\cc\Hall.h">
       <Filter>源文件\Classes\cc</Filter>
     </ClInclude>
@@ -216,6 +219,18 @@
       <Filter>源文件\Classes</Filter>
     </ClInclude>
     <ClInclude Include="Classes\StatTimer.h">
+      <Filter>源文件\Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\redisdata\RedisGet.h">
+      <Filter>源文件\Classes\redisdata</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\redisdata\RedisModify.h">
+      <Filter>源文件\Classes\redisdata</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\redisdata\RedisPut.h">
+      <Filter>源文件\Classes\redisdata</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\stdafx.h">
       <Filter>源文件\Classes</Filter>
     </ClInclude>
   </ItemGroup>
