--- a/GateServer/projects/GateServer1/Server1.vcxproj
+++ b/GateServer/projects/GateServer1/Server1.vcxproj
@@ -107,6 +107,7 @@
     <ClCompile Include="Classes\ConfigData.cpp" />
     <ClCompile Include="Classes\http\HttpEvent.cpp" />
     <ClCompile Include="Classes\http\HttpLogic.cpp" />
+    <ClCompile Include="Classes\http\HttpPay.cpp" />
     <ClCompile Include="Classes\main.cpp" />
     <ClCompile Include="Classes\netjson\json_reader.cpp" />
     <ClCompile Include="Classes\netjson\json_value.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="Classes\ConfigData.h" />
     <ClInclude Include="Classes\http\HttpEvent.h" />
     <ClInclude Include="Classes\http\HttpLogic.h" />
+    <ClInclude Include="Classes\http\HttpPay.h" />
     <ClInclude Include="Classes\netjson\json_batchallocator.h" />
     <ClInclude Include="Classes\netjson\json_lib.h" />
     <ClInclude Include="Classes\netjson\json_tool.h" />
