--- a/GateServer/projects/GateServer1/Server1.vcxproj
+++ b/GateServer/projects/GateServer1/Server1.vcxproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\redis\src\redis.cpp" />
     <ClCompile Include="..\..\..\redis\src\win32fixes.c" />
+    <ClCompile Include="Classes\cc\ConfigProto.cpp" />
     <ClCompile Include="Classes\cc\Hall.cpp" />
     <ClCompile Include="Classes\cc\LogicServer.cpp" />
     <ClCompile Include="Classes\cc\Login.cpp" />
@@ -121,6 +122,7 @@
     <ClCompile Include="Classes\network\TcpSocket.cpp" />
     <ClCompile Include="Classes\poco\LibEvent.cpp" />
     <ClCompile Include="Classes\poco\LibPOCO.cpp" />
+    <ClCompile Include="Classes\proto\ConfigInfo.cpp" />
     <ClCompile Include="Classes\proto\HallInfo.cpp" />
     <ClCompile Include="Classes\proto\LogicServerInfo.cpp" />
     <ClCompile Include="Classes\proto\LoginInfo.cpp" />
@@ -132,6 +134,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\redis\src\redis.h" />
     <ClInclude Include="..\..\..\redis\src\win32fixes.h" />
+    <ClInclude Include="Classes\cc\ConfigProto.h" />
     <ClInclude Include="Classes\cc\Hall.h" />
     <ClInclude Include="Classes\cc\LogicServer.h" />
     <ClInclude Include="Classes\cc\Login.h" />
@@ -171,6 +174,7 @@
     <ClInclude Include="Classes\poco\CProtocol.h" />
     <ClInclude Include="Classes\poco\LibEvent.h" />
     <ClInclude Include="Classes\poco\LibPOCO.h" />
+    <ClInclude Include="Classes\proto\ConfigInfo.h" />
     <ClInclude Include="Classes\proto\HallInfo.h" />
     <ClInclude Include="Classes\proto\LogicServerInfo.h" />
     <ClInclude Include="Classes\proto\LoginInfo.h" />
