--- a/LogicManager/LogicManager.vcxproj
+++ b/LogicManager/LogicManager.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="Classes\common\CSVDataInfo.cpp" />
     <ClCompile Include="Classes\common\MD5.cpp" />
     <ClCompile Include="Classes\common\Object.cpp" />
+    <ClCompile Include="Classes\common\StatTimer.cpp" />
     <ClCompile Include="Classes\common\XXIconv.cpp" />
     <ClCompile Include="Classes\HttpLogic.cpp" />
     <ClCompile Include="Classes\http\HttpEvent.cpp" />
@@ -120,6 +121,7 @@
     <ClInclude Include="Classes\common\iconv.h" />
     <ClInclude Include="Classes\common\MD5.h" />
     <ClInclude Include="Classes\common\Object.h" />
+    <ClInclude Include="Classes\common\StatTimer.h" />
     <ClInclude Include="Classes\common\XXIconv.h" />
     <ClInclude Include="Classes\HttpLogic.h" />
     <ClInclude Include="Classes\http\HttpEvent.h" />
