--- a/LogicManager/LogicManager.vcxproj.filters
+++ b/LogicManager/LogicManager.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="Classes\proto\LogicServerInfo.cpp">
       <Filter>源文件\Classes\proto</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\common\StatTimer.cpp">
+      <Filter>源文件\Classes\common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\stdafx.h">
@@ -202,6 +205,9 @@
     </ClInclude>
     <ClInclude Include="Classes\proto\LogicServerInfo.h">
       <Filter>源文件\Classes\proto</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\common\StatTimer.h">
+      <Filter>源文件\Classes\common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
