--- a/LogicManager/LogicManager.vcxproj.filters
+++ b/LogicManager/LogicManager.vcxproj.filters
@@ -105,6 +105,21 @@
     <ClCompile Include="Classes\common\StatTimer.cpp">
       <Filter>源文件\Classes\common</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\cc\Room.cpp">
+      <Filter>源文件\Classes\cc</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\cc\RoomLogic.cpp">
+      <Filter>源文件\Classes\cc</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\cc\Vo.cpp">
+      <Filter>源文件\Classes\cc</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\proto\RoomInfo.cpp">
+      <Filter>源文件\Classes\proto</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\proto\RoomLogicInfo.cpp">
+      <Filter>源文件\Classes\proto</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\stdafx.h">
@@ -208,6 +223,21 @@
     </ClInclude>
     <ClInclude Include="Classes\common\StatTimer.h">
       <Filter>源文件\Classes\common</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\cc\Room.h">
+      <Filter>源文件\Classes\cc</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\cc\RoomLogic.h">
+      <Filter>源文件\Classes\cc</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\cc\Vo.h">
+      <Filter>源文件\Classes\cc</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\proto\RoomInfo.h">
+      <Filter>源文件\Classes\proto</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\proto\RoomLogicInfo.h">
+      <Filter>源文件\Classes\proto</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
