--- a/LogicManager/LogicManager.vcxproj
+++ b/LogicManager/LogicManager.vcxproj
@@ -90,6 +90,9 @@
   <ItemGroup>
     <ClCompile Include="Classes\cc\DBProto.cpp" />
     <ClCompile Include="Classes\cc\LogicServer.cpp" />
+    <ClCompile Include="Classes\cc\Room.cpp" />
+    <ClCompile Include="Classes\cc\RoomLogic.cpp" />
+    <ClCompile Include="Classes\cc\Vo.cpp" />
     <ClCompile Include="Classes\common\Common.cpp" />
     <ClCompile Include="Classes\common\CSVDataHelper.cpp" />
     <ClCompile Include="Classes\common\CSVDataInfo.cpp" />
@@ -109,11 +112,16 @@
     <ClCompile Include="Classes\poco\LibEvent.cpp" />
     <ClCompile Include="Classes\poco\LibPOCO.cpp" />
     <ClCompile Include="Classes\proto\LogicServerInfo.cpp" />
+    <ClCompile Include="Classes\proto\RoomInfo.cpp" />
+    <ClCompile Include="Classes\proto\RoomLogicInfo.cpp" />
     <ClCompile Include="Classes\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\cc\DBProto.h" />
     <ClInclude Include="Classes\cc\LogicServer.h" />
+    <ClInclude Include="Classes\cc\Room.h" />
+    <ClInclude Include="Classes\cc\RoomLogic.h" />
+    <ClInclude Include="Classes\cc\Vo.h" />
     <ClInclude Include="Classes\common\Common.h" />
     <ClInclude Include="Classes\common\CSVBaseData.h" />
     <ClInclude Include="Classes\common\CSVDataHelper.h" />
@@ -144,6 +152,8 @@
     <ClInclude Include="Classes\poco\LibEvent.h" />
     <ClInclude Include="Classes\poco\LibPOCO.h" />
     <ClInclude Include="Classes\proto\LogicServerInfo.h" />
+    <ClInclude Include="Classes\proto\RoomInfo.h" />
+    <ClInclude Include="Classes\proto\RoomLogicInfo.h" />
     <ClInclude Include="Classes\stdafx.h" />
     <ClInclude Include="Classes\targetver.h" />
   </ItemGroup>
