--- a/LogicServer/LogicServer1/LogicServer.vcxproj.filters
+++ b/LogicServer/LogicServer1/LogicServer.vcxproj.filters
@@ -108,6 +108,15 @@
     <ClCompile Include="Classes\cc\Vo.cpp">
       <Filter>源文件\Classes\cc</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\ConfigData.cpp">
+      <Filter>源文件\Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\redis\src\redis.cpp">
+      <Filter>源文件\Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\redis\src\win32fixes.c">
+      <Filter>源文件\Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\stdafx.h">
@@ -208,6 +217,15 @@
     </ClInclude>
     <ClInclude Include="Classes\cc\Vo.h">
       <Filter>源文件\Classes\cc</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\ConfigData.h">
+      <Filter>源文件\Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\redis\src\redis.h">
+      <Filter>源文件\Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\redis\src\win32fixes.h">
+      <Filter>源文件\Classes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
