--- a/LogicServer/LogicServer1/LogicServer.vcxproj
+++ b/LogicServer/LogicServer1/LogicServer.vcxproj
@@ -55,9 +55,9 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;_CRT_NONSTDC_NO_DEPRECATE;_CRT_SECURE_NO_DEPRECATE;_XKEYCHECK_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>.\Classes;.\Classes\network;.\Classes\cc;.\Classes\common;..\protobuf\src;.\Classes\proto;.\Classes\http;.\Classes\netjson;.\Classes\room;.\Classes\control;.\Classes\log;.\libevent\include;..\curl\include\win32\curl;..\libMessagePack;..\Classes\poco;..\libevent;..\libevent\include;..\libevent\include\event2;.\Classes\cryptopp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Classes;.\Classes\network;.\Classes\cc;.\Classes\common;..\protobuf\src;.\Classes\proto;.\Classes\http;.\Classes\netjson;.\Classes\room;.\Classes\control;.\Classes\log;.\libevent\include;..\curl\include\win32\curl;..\libMessagePack;..\Classes\poco;..\libevent;..\libevent\include;..\libevent\include\event2;.\Classes\cryptopp;..\..\redis\src;..\..\redis\deps\hiredis;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
@@ -65,7 +65,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>ws2_32.lib;wsock32.lib;..\curl\prebuilt\win32\libcurl_imp.lib;..\curl\prebuilt\win32\libeay32.lib;..\curl\prebuilt\win32\ssleay32.lib;..\libevent\lib\libevent_core.lib;..\libevent\lib\libevent_extras.lib;..\libevent\lib\libevent.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>libcmt.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <AdditionalLibraryDirectories>.\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>.\Debug;..\..\redis\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <TargetMachine>MachineTHUMB</TargetMachine>
     </Link>
   </ItemDefinitionGroup>
@@ -88,6 +88,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\redis\src\redis.cpp" />
+    <ClCompile Include="..\..\redis\src\win32fixes.c" />
     <ClCompile Include="Classes\cc\DBProto.cpp" />
     <ClCompile Include="Classes\cc\LogicServer.cpp" />
     <ClCompile Include="Classes\cc\Vo.cpp" />
@@ -97,6 +99,7 @@
     <ClCompile Include="Classes\common\MD5.cpp" />
     <ClCompile Include="Classes\common\Object.cpp" />
     <ClCompile Include="Classes\common\XXIconv.cpp" />
+    <ClCompile Include="Classes\ConfigData.cpp" />
     <ClCompile Include="Classes\http\HttpEvent.cpp" />
     <ClCompile Include="Classes\http\HttpLogic.cpp" />
     <ClCompile Include="Classes\main.cpp" />
@@ -113,6 +116,8 @@
     <ClCompile Include="Classes\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\redis\src\redis.h" />
+    <ClInclude Include="..\..\redis\src\win32fixes.h" />
     <ClInclude Include="Classes\cc\DBProto.h" />
     <ClInclude Include="Classes\cc\LogicServer.h" />
     <ClInclude Include="Classes\cc\Vo.h" />
@@ -124,6 +129,7 @@
     <ClInclude Include="Classes\common\MD5.h" />
     <ClInclude Include="Classes\common\Object.h" />
     <ClInclude Include="Classes\common\XXIconv.h" />
+    <ClInclude Include="Classes\ConfigData.h" />
     <ClInclude Include="Classes\http\HttpEvent.h" />
     <ClInclude Include="Classes\http\HttpLogic.h" />
     <ClInclude Include="Classes\netjson\json_batchallocator.h" />
