--- a/LogicServer/LogicServer1/LogicServer.vcxproj.filters
+++ b/LogicServer/LogicServer1/LogicServer.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClCompile Include="..\..\redis\src\win32fixes.c">
       <Filter>源文件\Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\room\RoomControl.cpp">
+      <Filter>源文件\Classes\room</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\common\StatTimer.cpp">
+      <Filter>源文件\Classes\common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\stdafx.h">
@@ -226,6 +232,12 @@
     </ClInclude>
     <ClInclude Include="..\..\redis\src\win32fixes.h">
       <Filter>源文件\Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\room\RoomControl.h">
+      <Filter>源文件\Classes\room</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\common\StatTimer.h">
+      <Filter>源文件\Classes\common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
