--- a/GateServer/GateServer1/Server1.vcxproj
+++ b/GateServer/GateServer1/Server1.vcxproj
@@ -97,6 +97,7 @@
     <ClCompile Include="Classes\cc\Hall.cpp" />
     <ClCompile Include="Classes\cc\LogicServer.cpp" />
     <ClCompile Include="Classes\cc\Login.cpp" />
+    <ClCompile Include="Classes\cc\Ping.cpp" />
     <ClCompile Include="Classes\cc\Room.cpp" />
     <ClCompile Include="Classes\cc\RoomLogic.cpp" />
     <ClCompile Include="Classes\cc\Vo.cpp" />
@@ -133,6 +134,7 @@
     <ClCompile Include="Classes\proto\HallInfo.cpp" />
     <ClCompile Include="Classes\proto\LogicServerInfo.cpp" />
     <ClCompile Include="Classes\proto\LoginInfo.cpp" />
+    <ClCompile Include="Classes\proto\PingInfo.cpp" />
     <ClCompile Include="Classes\proto\RoomInfo.cpp" />
     <ClCompile Include="Classes\proto\RoomLogicInfo.cpp" />
     <ClCompile Include="Classes\redisdata\RedisGet.cpp" />
@@ -147,6 +149,7 @@
     <ClInclude Include="Classes\cc\Hall.h" />
     <ClInclude Include="Classes\cc\LogicServer.h" />
     <ClInclude Include="Classes\cc\Login.h" />
+    <ClInclude Include="Classes\cc\Ping.h" />
     <ClInclude Include="Classes\cc\Room.h" />
     <ClInclude Include="Classes\cc\RoomLogic.h" />
     <ClInclude Include="Classes\cc\Vo.h" />
@@ -194,6 +197,7 @@
     <ClInclude Include="Classes\proto\HallInfo.h" />
     <ClInclude Include="Classes\proto\LogicServerInfo.h" />
     <ClInclude Include="Classes\proto\LoginInfo.h" />
+    <ClInclude Include="Classes\proto\PingInfo.h" />
     <ClInclude Include="Classes\proto\RoomInfo.h" />
     <ClInclude Include="Classes\proto\RoomLogicInfo.h" />
     <ClInclude Include="Classes\redisdata\RedisGet.h" />
