--- a/LogicManager/LogicManager.vcxproj
+++ b/LogicManager/LogicManager.vcxproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="Classes\cc\DBProto.cpp" />
     <ClCompile Include="Classes\cc\LogicServer.cpp" />
+    <ClCompile Include="Classes\cc\Ping.cpp" />
     <ClCompile Include="Classes\cc\Room.cpp" />
     <ClCompile Include="Classes\cc\RoomLogic.cpp" />
     <ClCompile Include="Classes\cc\Vo.cpp" />
@@ -111,6 +112,7 @@
     <ClCompile Include="Classes\poco\LibEvent.cpp" />
     <ClCompile Include="Classes\poco\LibPOCO.cpp" />
     <ClCompile Include="Classes\proto\LogicServerInfo.cpp" />
+    <ClCompile Include="Classes\proto\PingInfo.cpp" />
     <ClCompile Include="Classes\proto\RoomInfo.cpp" />
     <ClCompile Include="Classes\proto\RoomLogicInfo.cpp" />
     <ClCompile Include="Classes\stdafx.cpp" />
@@ -118,6 +120,7 @@
   <ItemGroup>
     <ClInclude Include="Classes\cc\DBProto.h" />
     <ClInclude Include="Classes\cc\LogicServer.h" />
+    <ClInclude Include="Classes\cc\Ping.h" />
     <ClInclude Include="Classes\cc\Room.h" />
     <ClInclude Include="Classes\cc\RoomLogic.h" />
     <ClInclude Include="Classes\cc\Vo.h" />
@@ -150,6 +153,7 @@
     <ClInclude Include="Classes\poco\LibEvent.h" />
     <ClInclude Include="Classes\poco\LibPOCO.h" />
     <ClInclude Include="Classes\proto\LogicServerInfo.h" />
+    <ClInclude Include="Classes\proto\PingInfo.h" />
     <ClInclude Include="Classes\proto\RoomInfo.h" />
     <ClInclude Include="Classes\proto\RoomLogicInfo.h" />
     <ClInclude Include="Classes\stdafx.h" />
