--- a/LogicServer/LogicServer1/LogicServer.vcxproj
+++ b/LogicServer/LogicServer1/LogicServer.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="..\..\redis\src\win32fixes.c" />
     <ClCompile Include="Classes\cc\DBProto.cpp" />
     <ClCompile Include="Classes\cc\LogicServer.cpp" />
+    <ClCompile Include="Classes\cc\Ping.cpp" />
     <ClCompile Include="Classes\cc\Room.cpp" />
     <ClCompile Include="Classes\cc\RoomLogic.cpp" />
     <ClCompile Include="Classes\cc\Vo.cpp" />
@@ -115,6 +116,7 @@
     <ClCompile Include="Classes\network\EventListen.cpp" />
     <ClCompile Include="Classes\network\TcpSocket.cpp" />
     <ClCompile Include="Classes\proto\LogicServerInfo.cpp" />
+    <ClCompile Include="Classes\proto\PingInfo.cpp" />
     <ClCompile Include="Classes\proto\RoomInfo.cpp" />
     <ClCompile Include="Classes\proto\RoomLogicInfo.cpp" />
     <ClCompile Include="Classes\room\GRoom.cpp" />
@@ -126,6 +128,7 @@
     <ClInclude Include="..\..\redis\src\win32fixes.h" />
     <ClInclude Include="Classes\cc\DBProto.h" />
     <ClInclude Include="Classes\cc\LogicServer.h" />
+    <ClInclude Include="Classes\cc\Ping.h" />
     <ClInclude Include="Classes\cc\Room.h" />
     <ClInclude Include="Classes\cc\RoomLogic.h" />
     <ClInclude Include="Classes\cc\Vo.h" />
@@ -158,6 +161,7 @@
     <ClInclude Include="Classes\network\EventListen.h" />
     <ClInclude Include="Classes\network\TcpSocket.h" />
     <ClInclude Include="Classes\proto\LogicServerInfo.h" />
+    <ClInclude Include="Classes\proto\PingInfo.h" />
     <ClInclude Include="Classes\proto\RoomInfo.h" />
     <ClInclude Include="Classes\proto\RoomLogicInfo.h" />
     <ClInclude Include="Classes\room\GRoom.h" />
