--- a/GateServer/GateServer1/Server1.vcxproj.filters
+++ b/GateServer/GateServer1/Server1.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClCompile Include="Classes\cc\Ping.cpp">
       <Filter>源文件\Classes\cc</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\common\CLog.cpp">
+      <Filter>源文件\Classes\common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\stdafx.h">
@@ -385,6 +388,9 @@
     </ClInclude>
     <ClInclude Include="Classes\cc\Ping.h">
       <Filter>源文件\Classes\cc</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\common\CLog.h">
+      <Filter>源文件\Classes\common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
