--- a/GateServer/GateServer1/Server1.vcxproj
+++ b/GateServer/GateServer1/Server1.vcxproj
@@ -189,6 +189,81 @@
     <ClInclude Include="Classes\openapi\json\cJSON.h" />
     <ClInclude Include="Classes\openapi\json\json_type.h" />
     <ClInclude Include="Classes\openapi\json\json_util.h" />
+    <ClInclude Include="Classes\openapi\openssl\aes.h" />
+    <ClInclude Include="Classes\openapi\openssl\asn1.h" />
+    <ClInclude Include="Classes\openapi\openssl\asn1t.h" />
+    <ClInclude Include="Classes\openapi\openssl\asn1_mac.h" />
+    <ClInclude Include="Classes\openapi\openssl\bio.h" />
+    <ClInclude Include="Classes\openapi\openssl\blowfish.h" />
+    <ClInclude Include="Classes\openapi\openssl\bn.h" />
+    <ClInclude Include="Classes\openapi\openssl\buffer.h" />
+    <ClInclude Include="Classes\openapi\openssl\camellia.h" />
+    <ClInclude Include="Classes\openapi\openssl\cast.h" />
+    <ClInclude Include="Classes\openapi\openssl\cmac.h" />
+    <ClInclude Include="Classes\openapi\openssl\cms.h" />
+    <ClInclude Include="Classes\openapi\openssl\comp.h" />
+    <ClInclude Include="Classes\openapi\openssl\conf.h" />
+    <ClInclude Include="Classes\openapi\openssl\conf_api.h" />
+    <ClInclude Include="Classes\openapi\openssl\crypto.h" />
+    <ClInclude Include="Classes\openapi\openssl\des.h" />
+    <ClInclude Include="Classes\openapi\openssl\des_old.h" />
+    <ClInclude Include="Classes\openapi\openssl\dh.h" />
+    <ClInclude Include="Classes\openapi\openssl\dsa.h" />
+    <ClInclude Include="Classes\openapi\openssl\dso.h" />
+    <ClInclude Include="Classes\openapi\openssl\dtls1.h" />
+    <ClInclude Include="Classes\openapi\openssl\ebcdic.h" />
+    <ClInclude Include="Classes\openapi\openssl\ec.h" />
+    <ClInclude Include="Classes\openapi\openssl\ecdh.h" />
+    <ClInclude Include="Classes\openapi\openssl\ecdsa.h" />
+    <ClInclude Include="Classes\openapi\openssl\engine.h" />
+    <ClInclude Include="Classes\openapi\openssl\err.h" />
+    <ClInclude Include="Classes\openapi\openssl\evp.h" />
+    <ClInclude Include="Classes\openapi\openssl\e_os2.h" />
+    <ClInclude Include="Classes\openapi\openssl\hmac.h" />
+    <ClInclude Include="Classes\openapi\openssl\idea.h" />
+    <ClInclude Include="Classes\openapi\openssl\krb5_asn.h" />
+    <ClInclude Include="Classes\openapi\openssl\kssl.h" />
+    <ClInclude Include="Classes\openapi\openssl\lhash.h" />
+    <ClInclude Include="Classes\openapi\openssl\md4.h" />
+    <ClInclude Include="Classes\openapi\openssl\md5.h" />
+    <ClInclude Include="Classes\openapi\openssl\mdc2.h" />
+    <ClInclude Include="Classes\openapi\openssl\modes.h" />
+    <ClInclude Include="Classes\openapi\openssl\objects.h" />
+    <ClInclude Include="Classes\openapi\openssl\obj_mac.h" />
+    <ClInclude Include="Classes\openapi\openssl\ocsp.h" />
+    <ClInclude Include="Classes\openapi\openssl\opensslconf.h" />
+    <ClInclude Include="Classes\openapi\openssl\opensslv.h" />
+    <ClInclude Include="Classes\openapi\openssl\ossl_typ.h" />
+    <ClInclude Include="Classes\openapi\openssl\pem.h" />
+    <ClInclude Include="Classes\openapi\openssl\pem2.h" />
+    <ClInclude Include="Classes\openapi\openssl\pkcs12.h" />
+    <ClInclude Include="Classes\openapi\openssl\pkcs7.h" />
+    <ClInclude Include="Classes\openapi\openssl\pqueue.h" />
+    <ClInclude Include="Classes\openapi\openssl\rand.h" />
+    <ClInclude Include="Classes\openapi\openssl\rc2.h" />
+    <ClInclude Include="Classes\openapi\openssl\rc4.h" />
+    <ClInclude Include="Classes\openapi\openssl\ripemd.h" />
+    <ClInclude Include="Classes\openapi\openssl\rsa.h" />
+    <ClInclude Include="Classes\openapi\openssl\safestack.h" />
+    <ClInclude Include="Classes\openapi\openssl\seed.h" />
+    <ClInclude Include="Classes\openapi\openssl\sha.h" />
+    <ClInclude Include="Classes\openapi\openssl\srp.h" />
+    <ClInclude Include="Classes\openapi\openssl\srtp.h" />
+    <ClInclude Include="Classes\openapi\openssl\ssl.h" />
+    <ClInclude Include="Classes\openapi\openssl\ssl2.h" />
+    <ClInclude Include="Classes\openapi\openssl\ssl23.h" />
+    <ClInclude Include="Classes\openapi\openssl\ssl3.h" />
+    <ClInclude Include="Classes\openapi\openssl\stack.h" />
+    <ClInclude Include="Classes\openapi\openssl\symhacks.h" />
+    <ClInclude Include="Classes\openapi\openssl\tls1.h" />
+    <ClInclude Include="Classes\openapi\openssl\ts.h" />
+    <ClInclude Include="Classes\openapi\openssl\txt_db.h" />
+    <ClInclude Include="Classes\openapi\openssl\ui.h" />
+    <ClInclude Include="Classes\openapi\openssl\ui_compat.h" />
+    <ClInclude Include="Classes\openapi\openssl\whrlpool.h" />
+    <ClInclude Include="Classes\openapi\openssl\x509.h" />
+    <ClInclude Include="Classes\openapi\openssl\x509v3.h" />
+    <ClInclude Include="Classes\openapi\openssl\x509_vfy.h" />
     <ClInclude Include="Classes\poco\CLibEventData.h" />
     <ClInclude Include="Classes\poco\CProtocol.h" />
     <ClInclude Include="Classes\poco\LibEvent.h" />
