--- a/LogicServer/LogicServer1/LogicServer.vcxproj.filters
+++ b/LogicServer/LogicServer1/LogicServer.vcxproj.filters
@@ -114,9 +114,6 @@
     <ClCompile Include="..\..\redis\src\redis.cpp">
       <Filter>源文件\Classes</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\redis\src\win32fixes.c">
-      <Filter>源文件\Classes</Filter>
-    </ClCompile>
     <ClCompile Include="Classes\room\RoomControl.cpp">
       <Filter>源文件\Classes\room</Filter>
     </ClCompile>
@@ -140,6 +137,12 @@
     </ClCompile>
     <ClCompile Include="Classes\proto\PingInfo.cpp">
       <Filter>源文件\Classes\proto</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\common\CLog.cpp">
+      <Filter>源文件\Classes\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\redis\src\win32fixes.c">
+      <Filter>源文件\Classes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -248,9 +251,6 @@
     <ClInclude Include="..\..\redis\src\redis.h">
       <Filter>源文件\Classes</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\redis\src\win32fixes.h">
-      <Filter>源文件\Classes</Filter>
-    </ClInclude>
     <ClInclude Include="Classes\room\RoomControl.h">
       <Filter>源文件\Classes\room</Filter>
     </ClInclude>
@@ -274,6 +274,12 @@
     </ClInclude>
     <ClInclude Include="Classes\proto\PingInfo.h">
       <Filter>源文件\Classes\proto</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\common\CLog.h">
+      <Filter>源文件\Classes\common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\redis\src\win32fixes.h">
+      <Filter>源文件\Classes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
